--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.80</version>
+			<version>2.0.7.graal</version>
 		</dependency>
 	</dependencies>
 	
